Changed get(0) to getFirst() in main